use breakpoints for dynamic padding on buttons to fix offset on mobile

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -273,7 +273,8 @@ blockquote {
 }
 
 /* BREAK POINTS */
-@media (max-width: 768px) {
-  .hero-section {
+@media (min-width: 768px) {
+  .cta-btn {
+    padding-top: 8px;
   }
 }
